# wacr

felab/: .gitignore  README.md
felab/sc/: Cargo.toml  build.rs
felab/sc/src/: ast.rs  lex.rs  main.rs  simpc.lalrpop  simpc.rs
felab/sc_ref/: Cargo.toml
felab/scc/: Cargo.toml
felab/scc/src/: main.rs
felab/scc/src/compiler/: compiler.rs  mod.rs  simpcc.rs
felab/scc/src/compiler/frontend/: mod.rs  typecheck.rs
felab/scc/src/compiler/frontend/parse/: elab.rs  lex.rs  mod.rs  simpc.lalrpop  simpc.rs
felab/tests/prog/: 1.simpc  2.simpc
